Fix Tag Dropdown on main menu to have scrollbar

--- a/CmsWeb/Content/css/Fixups2.css
+++ b/CmsWeb/Content/css/Fixups2.css
@@ -1156,3 +1156,8 @@ div.logo {
 .editable-pre-wrapped {
     white-space: pre-line;
 }
+
+#tagdropdown {
+    height: 35em;
+    overflow: auto;
+}
